fixed choose game page on mobile view

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -20,16 +20,12 @@
     &__social-icons {
         display: flex;
         position: fixed;
-        bottom: 0;
-        left: 30vw;
+        top: 0;
+        right: 0;
         @include cursor;
         width: 25rem;
         height: 5.1rem;
-        //position: absolute;
-        //top: 5%;
         margin: 0;
-        //margin-left: 92.3vw;
-        
         background-color: rgba(0, 0, 0, 0.061);
         border-radius: 6px;
         box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.109), 2px 2px 2px rgba(0, 0, 0, 0.109), -2px -2px 2px rgba(0, 0, 0, 0.109), -2px -2px 2px rgba(0, 0, 0, 0.109);
