--- a/client/src/components/ChooseGame/ChooseGame.scss
+++ b/client/src/components/ChooseGame/ChooseGame.scss
@@ -2,43 +2,46 @@
 .choose {
     @include cursor;
     margin: 0;
-    padding: 0;
-    height: 100vh;
+    padding: 1rem;
+    height: fit-content;
     background-color: #fded00;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     &__head-container{
-        width: 47vw;
-        height: 100vh;
+        padding: 3rem;
+        width: 100%;
+        height: 100%;
+        border-radius: 12px;
         display: flex;
         flex-direction: column;
+        align-items: center;
         margin: 0;
-        padding: 0;
+        //padding: 0;
         background-color:white;
         box-shadow: 5px 3px 5px rgba($color: #e2e2e2, $alpha: 0.7);
     }
     &__primary-head{
+        text-align: center;
         color: #fded00;
-        font-size: 110px;
+        font-size: 9rem;
         font-weight: bolder;
-        margin: 30px 0 0 40px;
         padding: 0;
-        line-height: 100px;
+        margin: 0;
     }
     &__secondary-head{
         color: #fded00;
-        margin: 0 0 0 40px;
         font-size: 50px;
         font-weight: normal;
         padding: 0;
+        margin: 0;
+        text-align: center;
     }
     &__instruction-container{
         border: 3px solid #fded00;
-        margin: 30px 0 0 40px;
         height: fit-content;
-        padding: 20px 15px 25px 0;
-        width: 350px;
+        width: 85vw;
     }
     &__instruction{
         color: #fded00;
