--- a/client/src/components/ChooseGame/Slides/SlideOne/SlideOne.scss
+++ b/client/src/components/ChooseGame/Slides/SlideOne/SlideOne.scss
@@ -10,8 +10,9 @@
     align-items: center;
     margin-left: -20vw;
     outline: none;
-    
+    margin-top: 5rem;
     &__rider-up{
+        display: none;
         width: 390px;
         position: absolute;
         left: 27vw;
@@ -19,13 +20,14 @@
         
     }
     &__rider-down{
-        
+        display: none;
         width: 390px;
         position: absolute;
         left: 27vw;
         top: 30vh;
     }
     &__rider-main{
+        display: none;
         width: 590px;
         position: absolute;
         left: 27vw;
@@ -34,15 +36,17 @@
     &__tile{
         @include cursor;
         display: flex;
-        align-items: center;
-        margin: 2rem 0;
-        margin-left: 0;
-        width: 25rem;
-        height: 19rem;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        margin: 1rem 0;
+        margin-left: 8rem;
+        width: 65%;
+        height: 40vh;
         box-shadow: 0 0 10px rgba(0,0,0,0.3);
         border-radius: 15px;
         background-color: white;
-        padding: 0.4rem;
+        //padding: 0.4rem;
         &:hover {
             @include cursor;
             background-color: rgba(97, 96, 96, 0.01);
@@ -57,17 +61,18 @@
     }
     &__tile-pic{
         @include cursor;
-        width: 15.5rem;
+        width: 58%;
         object-fit: cover;
-        margin: 0 0 0 -40px;
         height: 16rem;
         padding: 0;
+        margin: 0 auto;
+        margin-top: -3rem;
     }
     &__tile-title{
         text-transform: uppercase;
         letter-spacing: 0.2rem;
         font-weight: bolder;
-        font-size: 30px;
+        font-size: 1.8rem;
         line-height: 1.5em;
         text-align: center;
         background-image: linear-gradient(45deg, violet, indigo, blue, green, orange, red);
@@ -77,7 +82,8 @@
         -webkit-text-fill-color: transparent; 
         -moz-text-fill-color: transparent;
         padding: 0;
-        margin-left: 10px;
+        margin: 0;
+        //margin-left: 10px;
     }
     &__link{
         text-decoration: none;
